@@ -17,7 +17,7 @@ private static	Boolean				onAqua ;
 	public static boolean
 	onMac() {
 		if (onMac == null) {
-			onMac = new Boolean(System.getProperty("mrj.version") != null) ;
+			onMac = Boolean.valueOf(System.getProperty("mrj.version") != null);
 		}
 		return onMac.booleanValue() ;
 	}
@@ -25,9 +25,7 @@ private static	Boolean				onAqua ;
 	public static boolean
 	onAqua() {
 		if (onAqua == null) {
-			onAqua = new Boolean(onMac() && (
-							UIManager.getSystemLookAndFeelClassName().equals(
-								UIManager.getLookAndFeel().getClass().getName()))) ; // <- I love Lisp!
+			onAqua = Boolean.valueOf(onMac() && (UIManager.getSystemLookAndFeelClassName().equals(UIManager.getLookAndFeel().getClass().getName()))); 
 		}
 
 		return onAqua.booleanValue() ;
